--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
                 </div>
                 <div class="arrow">›</div>
             </a>
+
+            <!-- 4. 비즈니스 & 이벤트 -->
+            <a href="businessevent/index.html" class="menu-card">
+                <div class="icon-box" style="background-color: #fff3e0; color: #ff9800;">💼</div>
+                <div class="content">
+                    <div class="title">비즈니스 & 이벤트 <span
+                            style="font-size:10px; color:#ffffff; background:#e17055; padding:2px 5px; border-radius:4px;">NEW</span>
+                    </div>
+                    <div class="desc">명함, 도장, 영수증부터<br>네임스티커, SNS 패러디까지</div>
+                </div>
+                <div class="arrow">›</div>
+            </a>
         </main>
 
         <footer>
@@ -261,6 +273,38 @@
             <ul style="color: #636e72; font-size: 0.95rem;">
                 <li>데이터: JSON Formatter, CSV to SQL, Base64 Converter</li>
                 <li>유틸리티: QR Code 생성, WebP 변환, Markdown 에디터</li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 3rem;">
+            <h3
+                style="font-size: 1.4rem; margin-bottom: 1rem; color: #ff9800; font-weight: bold; display: flex; align-items: center;">
+                <span
+                    style="background: #fff3e0; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">💼</span>
+                비즈니스 & 이벤트 (New)
+            </h3>
+            <p style="margin-bottom: 1rem;">
+                "디자인은 돈이고, 시간입니다." 1인 기업가와 소상공인, 그리고 N잡러를 위한 <strong>무료 디자인 자동화 도구</strong>입니다.
+                명함, 영수증, 도장, 쿠폰 등 사업에 꼭 필요하지만 직접 만들기엔 까다로운 문서들을 웹에서 즉시 생성하세요.
+                전문 디자이너가 없어도 퀄리티 높은 브랜딩이 가능합니다. 포토샵을 몰라도 괜찮습니다. 당신의 비즈니스 아이디어만 가져오세요.
+            </p>
+            <ul style="color: #636e72; font-size: 0.95rem;">
+                <li><strong>창업 필수품</strong>: <a href="businessevent/namecard.html"
+                        style="color:#e67e22; text-decoration:none; font-weight:bold;">셀프 명함</a>, <a
+                        href="businessevent/stamp.html"
+                        style="color:#d35400; text-decoration:none; font-weight:bold;">온라인 도장</a>, <a
+                        href="businessevent/receipt.html"
+                        style="color:#7f8c8d; text-decoration:none; font-weight:bold;">간이 영수증</a></li>
+                <li><strong>이벤트/굿즈</strong>: <a href="businessevent/invitation.html"
+                        style="color:#e91e63; text-decoration:none; font-weight:bold;">모바일 초대장</a>, <a
+                        href="businessevent/coupon.html"
+                        style="color:#c2185b; text-decoration:none; font-weight:bold;">쿠폰/상품권</a>, <a
+                        href="businessevent/certificate.html"
+                        style="color:#f1c40f; text-decoration:none; font-weight:bold;">상장/수료증</a></li>
+                <li><strong>생활/재미</strong>: <a href="businessevent/label.html"
+                        style="color:#576574; text-decoration:none; font-weight:bold;">네임스티커</a>, <a
+                        href="businessevent/parody.html"
+                        style="color:#f39c12; text-decoration:none; font-weight:bold;">SNS 패러디</a></li>
             </ul>
         </div>
 
