--- a/businessevent/invitation.html
+++ b/businessevent/invitation.html
@@ -518,6 +518,9 @@
 
             <button class="btn-download" onclick="downloadLink()">⬇️ 초대장 이미지 저장 (JPG)</button>
             <p style="font-size:0.8rem; color:#888; margin-top:10px;">이미지는 갤러리/약도 기능이 없는 단순 전송용 파일입니다.</p>
+            <div style="font-size: 0.8rem; color: #7f8c8d; text-align: center; margin-top: 10px;">
+                🔒 본 사이트의 모든 데이터와 이미지는 서버로 전송되지 않고 사용자 브라우저 내에서만 처리됩니다.
+            </div>
 
             <!-- Ad Placeholder
             <div class="ad-banner" style="margin-top:20px;">광고 영역 (하단)</div>
