--- a/businessevent/receipt.html
+++ b/businessevent/receipt.html
@@ -618,7 +618,14 @@
             </div>
 
             <button class="btn-download" onclick="downloadReceipt()">⬇️ 영수증 발급 (저장)</button>
-            <p style="font-size:0.8rem; color:#888; margin-top:10px;">이 영수증은 법적 효력이 없는 임의 서식일 수 있습니다.</p>
+            <div class="legal-warning"
+                style="padding: 10px; background-color: #ffebee; color: #d32f2f; border: 1px solid #ffcdd2; border-radius: 4px; margin: 10px 0; font-size: 0.9em; font-weight: bold; text-align: center;">
+                🚨 본 도구는 단순 참고용이며, 법적 효력이 없습니다. 타인을 속이는 용도로 사용 시 법적 처벌을 받을 수 있습니다.
+            </div>
+            <div class="privacy-notice" style="font-size: 0.8em; color: #7f8c8d; text-align: center; margin-top: 10px;">
+                🔒 본 사이트의 모든 데이터와 이미지는 서버로 전송되지 않고 사용자 브라우저 내에서만 처리됩니다.
+            </div>
+            <p style="font-size:0.8rem; color:#888; margin-top:10px;">이 영수증은 법적 효력이 없는 임의 서식입니다.</p>
         </div>
     </div>
 
