--- a/random/picker.html
+++ b/random/picker.html
@@ -313,6 +313,85 @@
             </div>
         </div>
 
+        <article class="seo-section"
+            style="padding: 2rem; background: #fdfdfd; border-top: 10px solid #f0f2f5; color: #555; line-height: 1.8; font-size: 0.95rem;">
+            <h2 style="font-size: 1.5rem; color: #FF9F43; margin-bottom: 1.5rem;">🎲 간편 랜덤 추첨기: 공정하고 빠른 당첨자 선정의 모든 것
+            </h2>
+
+            <h3
+                style="font-size: 1.2rem; color: #333; margin-top: 2rem; border-left: 4px solid #FF9F43; padding-left: 10px;">
+                왜 랜덤 추첨기가 필요할까요?</h3>
+            <p>
+                우리는 일상생활에서 수많은 결정의 순간에 직면합니다. "오늘 점심은 무엇을 먹을까?", "이번 주 청소 당번은 누구로 할까?",
+                "이벤트 경품의 행운의 주인공은 누구일까?" 사소해 보이지만 때로는 우리를 곤란하게 만드는 이러한 선택의 순간들.
+                누군가의 주관적인 개입 없이, 모두가 납득할 수 있는 공정한 결과가 필요할 때 우리는 '무작위성(Randomness)'에 의지합니다.
+                전통적으로는 종이를 찢어 이름을 적고 접어서 뽑는 '제비뽑기' 방식을 많이 사용했지만, 이는 준비 과정이 번거롭고 시간이 오래 걸립니다.
+                또한 종이를 섞는 과정에서 미세한 흠집이나 접힘의 차이로 인해 완전한 무작위성을 보장하기 어렵다는 단점도 있었습니다.
+                <strong>간편 랜덤 추첨기</strong>는 이러한 아날로그 방식의 단점을 완벽하게 보완하여, 언제 어디서나 스마트폰이나 PC만 있다면
+                1초 만에 가장 공정한 결과를 도출해내는 현대인의 필수 유틸리티입니다.
+            </p>
+
+            <h3
+                style="font-size: 1.2rem; color: #333; margin-top: 2rem; border-left: 4px solid #FF9F43; padding-left: 10px;">
+                이 툴의 핵심 기능과 장점</h3>
+            <p>
+                <strong>1. 압도적인 간편함:</strong> 복잡한 회원가입이나 로그인 절차가 전혀 없습니다. 웹사이트에 접속하여 참가자 명단(후보)을 입력하고
+                뽑을 인원수만 설정하면 끝입니다. 엑셀이나 카카오톡 대화방에 있는 명단을 그대로 복사(Ctrl+C)해서 붙여넣기(Ctrl+V)만 하면
+                자동으로 줄바꿈을 인식하여 후보를 등록합니다. 수백 명의 참가자도 단 몇 초 만에 세팅이 가능합니다.
+            </p>
+            <p>
+                <strong>2. 완벽한 공정성 (Random Algorithm):</strong> 이 추첨기는 컴퓨터 프로그래밍 언어의 표준 난수 생성 함수(Math.random)와
+                피셔-예이츠 셔플(Fisher-Yates Shuffle) 알고리즘을 기반으로 합니다.
+                단순히 순서대로 뽑는 것이 아니라, 배열 자체를 무작위로 뒤섞은 뒤 앞에서부터 필요한 인원만큼 추출하는 방식입니다.
+                이는 수학적으로 모든 참가자가 당첨될 확률이 동일함을 보장합니다. 주최자의 의도가 개입될 여지가 전혀 없는, 100% 클린한 추첨을 약속합니다.
+            </p>
+            <p>
+                <strong>3. 긴장감을 고조시키는 시각 효과:</strong> 결과가 바로 "띡" 하고 나온다면 재미가 없겠죠?
+                '두구두구'하는 긴장감을 느낄 수 있도록 이름이 빠르게 롤링되는 애니메이션 효과를 적용했습니다.
+                그리고 당첨자가 확정되는 순간, 화면 가득 터지는 화려한 폭죽(Confetti) 효과는 당첨의 기쁨을 배가시킵니다.
+                오프라인 행사나 온라인 라이브 방송에서 화면을 띄워놓고 진행하기에 최적화된 연출입니다.
+            </p>
+
+            <h3
+                style="font-size: 1.2rem; color: #333; margin-top: 2rem; border-left: 4px solid #FF9F43; padding-left: 10px;">
+                다양한 활용 사례 (Use Cases)</h3>
+            <ul style="list-style-type: disc; padding-left: 20px; margin-top: 10px;">
+                <li style="margin-bottom: 10px;"><strong>직장인 점심 메뉴 선정:</strong> 한식, 중식, 일식, 양식... 매일 반복되는 직장인 최대의 난제. 후보
+                    식당들을 적어넣고 돌려보세요. 결정 장애로 낭비되는 점심시간 10분을 아껴드립니다.</li>
+                <li style="margin-bottom: 10px;"><strong>SNS 이벤트 당첨자 발표:</strong> 인스타그램 댓글 이벤트나 유튜브 구독자 이벤트 등을 진행하시나요?
+                    아이디를 엑셀로 정리한 뒤 이곳에 붙여넣으세요. 실시간으로 추첨 과정을 녹화해서 공유하면 공정성 논란 없이 깔끔하게 이벤트를 마무리할 수 있습니다.</li>
+                <li style="margin-bottom: 10px;"><strong>학교/학원 수업 도우미:</strong> 발표 순서를 정하거나, 청소 당번을 뽑을 때 선생님들의 필수품입니다.
+                    아이들도 자신의 이름이 돌아가는 화면을 보며 흥미진진해할 것입니다.</li>
+                <li style="margin-bottom: 10px;"><strong>동호회/모임 경품 추첨:</strong> 송년회나 신년회, 각종 모임에서 준비한 경품을 나눌 때 사용해보세요.
+                    진행자가 직접 뽑는 것보다 훨씬 더 투명하고 재미있는 이벤트가 됩니다.</li>
+                <li style="margin-bottom: 10px;"><strong>스터디 조 편성:</strong> 많은 인원을 여러 개의 조로 나눠야 할 때도 유용합니다. 전체 인원을 섞어서
+                    순서대로 자르면 그것이 바로 랜덤 조 편성이 됩니다.</li>
+            </ul>
+
+            <h3
+                style="font-size: 1.2rem; color: #333; margin-top: 2rem; border-left: 4px solid #FF9F43; padding-left: 10px;">
+                자주 묻는 질문 (FAQ)</h3>
+            <p>
+                <strong>Q. 최대 몇 명까지 가능한가요?</strong><br>
+                시스템상으로는 수천 명, 수만 명도 가능하지만, 브라우저의 성능과 가독성을 고려하여 1,000명 이내를 권장합니다. 그 이상일 경우 텍스트 입력 처리에 약간의 버벅임이 있을 수 있습니다.
+            </p>
+            <p>
+                <strong>Q. 개인정보는 저장되나요?</strong><br>
+                절대 저장되지 않습니다. 이 도구는 클라이언트 사이드(Client-Side) 스크립트로 동작합니다. 즉, 여러분이 입력한 이름과 데이터는 오직 여러분의 인터넷 브라우저에서만 처리되며,
+                서버로 전송되거나 DB에 저장되지 않습니다. 새로고침하면 모든 데이터는 사라집니다. 안심하고 사용하세요.
+            </p>
+            <p>
+                <strong>Q. 중복 당첨이 가능한가요?</strong><br>
+                기본 설정은 '비복원 추출'입니다. 즉, 한 번 뽑힌 사람은 리스트에서 제외되는 개념이 아니라, 전체 명단에서 n명을 유니크하게 뽑는 방식입니다. 따라서 5명을 뽑으면 서로 다른 5명이
+                나옵니다. 만약 한 사람이 여러 번 당첨될 수 있게 하려(가중치)면 이름을 여러 번(예: 김철수, 김철수, 김철수) 입력하시면 확률이 올라갑니다.
+            </p>
+
+            <p style="margin-top: 2rem; padding: 1rem; background: #fff3e0; border-radius: 8px;">
+                <strong>💡 팁:</strong> 모바일에서도 완벽하게 동작합니다. 친구들과 모여있을 때, 바로 스마트폰을 꺼내 주소를 입력하고 내기를 시작해보세요.
+                가장 공정하고 스릴 넘치는 승부가 여러분을 기다립니다.
+            </p>
+        </article>
+
         <footer>
             &copy; 2026 Yangbam Lab. All rights reserved.
         </footer>
