--- a/businessevent/invitation.html
+++ b/businessevent/invitation.html
@@ -109,7 +109,7 @@
             display: flex;
             flex-wrap: wrap;
             width: 100%;
-            max-width: 1100px;
+            max-width: 500px;
             gap: 40px;
             padding: 40px 20px;
             justify-content: center;
@@ -394,7 +394,7 @@
         }
 
         /* Mobile Responsiveness */
-        @media (max-width: 768px) {
+        @media (max-width: 99999px) {
             body {
                 padding-bottom: 200px;
             }
@@ -409,8 +409,8 @@
                 order: -1;
                 /* Top */
                 width: 100%;
-                position: sticky;
-                top: 0;
+                /* position: sticky; Removed */
+                /* top: 0; */
                 z-index: 100;
                 background-color: var(--bg-color);
                 padding: 10px 0 20px 0;
