--- a/businessevent/coupon.html
+++ b/businessevent/coupon.html
@@ -84,13 +84,16 @@
         /* Main Container */
         .container {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column-reverse;
+            /* Preview on top */
+            /* flex-wrap: wrap; Removed */
             width: 100%;
-            max-width: 1200px;
+            max-width: 500px;
             gap: 40px;
             padding: 40px 20px;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
+            /* Center Items */
         }
 
         /* Left: Control Panel */
@@ -422,7 +425,7 @@
             margin-bottom: 20px;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 99999px) {
             .container {
                 flex-direction: column;
             }
