--- a/businessevent/label.html
+++ b/businessevent/label.html
@@ -80,26 +80,29 @@
         /* Container */
         .container {
             display: flex;
-            flex-wrap: wrap-reverse;
-            /* Mobile: Preview on Top (in markup Preview is second, so reverse makes it top? No, let's use standard order and media query for consistency) */
-            /* Actually, let's keep markup: Controls then Preview. On Mobile: flex-direction column-reverse */
+            flex-direction: column-reverse;
+            /* Preview on top */
+            /* flex-wrap: wrap-reverse; Removed */
             width: 100%;
-            max-width: 1200px;
+            max-width: 500px;
             gap: 40px;
             padding: 40px 20px;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
+            /* Center Items */
         }
 
         /* Left: Preview (Visual priority) */
         .preview-section {
             flex: 1;
-            min-width: 340px;
+            width: 100%;
+            min-width: 300px;
+            /* Reduced min-width safe for 500px */
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: sticky;
-            top: 20px;
+            /* position: sticky; Removed */
+            /* top: 20px; */
         }
 
         /* Right: Controls */
@@ -390,7 +393,7 @@
 
         /* Mobile */
         /* Mobile Responsive Improvements */
-        @media (max-width: 768px) {
+        @media (max-width: 99999px) {
             body {
                 padding-bottom: 150px;
                 overflow-x: hidden;
@@ -408,8 +411,8 @@
             .preview-section {
                 order: -1;
                 width: 100%;
-                position: sticky;
-                top: 0;
+                /* position: sticky; Removed to prevent blocking */
+                /* top: 0; */
                 z-index: 100;
                 background-color: var(--bg);
                 padding: 10px 0;
