--- a/businessevent/parody.html
+++ b/businessevent/parody.html
@@ -112,7 +112,7 @@
             display: flex;
             flex-wrap: wrap;
             width: 100%;
-            max-width: 1200px;
+            max-width: 500px;
             gap: 40px;
             padding: 40px 20px;
             justify-content: center;
@@ -514,7 +514,7 @@
         }
 
         /* Mobile */
-        @media (max-width: 768px) {
+        @media (max-width: 99999px) {
             .container {
                 flex-direction: column;
                 padding: 10px;
@@ -522,8 +522,8 @@
 
             .preview-section {
                 order: -1;
-                position: sticky;
-                top: 0;
+                /* position: sticky; */
+                /* top: 0; */
                 z-index: 100;
                 margin-bottom: 20px;
             }
