--- a/businessevent/stamp.html
+++ b/businessevent/stamp.html
@@ -98,13 +98,16 @@
         /* Container */
         .container {
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column-reverse;
+            /* Preview on top */
+            /* flex-wrap: wrap; Removed */
             width: 100%;
-            max-width: 1100px;
+            max-width: 500px;
             gap: 40px;
             padding: 40px 20px;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
+            /* Center Items */
         }
 
         /* Left: Form */
@@ -305,7 +308,7 @@
             font-weight: bold;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 99999px) {
             .container {
                 flex-direction: column;
             }
