--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
         </header>
 
         <main>
+            <!-- 6. 무작위 도구 -->
+            <a href="random/index.html" class="menu-card">
+                <div class="icon-box" style="background-color: #fff3e0; color: #ff9f43;">🎲</div>
+                <div class="content">
+                    <div class="title">무작위 도구 <span
+                            style="font-size:10px; color:#ffffff; background:#e17055; padding:2px 5px; border-radius:4px;">HOT</span>
+                    </div>
+                    <div class="desc">달팽이 레이싱, 랜덤 추첨기 등<br>결정 장애 해결을 위한 솔루션</div>
+                </div>
+                <div class="arrow">›</div>
+            </a>
+
             <!-- 1. 심리테스트 -->
             <a href="test/index.html" class="menu-card">
                 <div class="icon-box" style="background-color: #e3f2fd; color: #0984e3;">🧠</div>
@@ -219,18 +231,6 @@
                 <div class="arrow">›</div>
             </a>
 
-            <!-- 6. Random Lab -->
-            <a href="random/index.html" class="menu-card">
-                <div class="icon-box" style="background-color: #fff3e0; color: #ff9f43;">🎲</div>
-                <div class="content">
-                    <div class="title">Random Lab (결정 해결) <span
-                            style="font-size:10px; color:#ffffff; background:#e17055; padding:2px 5px; border-radius:4px;">HOT</span>
-                    </div>
-                    <div class="desc">달팽이 레이싱, 랜덤 추첨기 등<br>결정 장애 해결을 위한 솔루션</div>
-                </div>
-                <div class="arrow">›</div>
-            </a>
-
             <!-- 7. 20g Lab (Student Utils) -->
             <a href="20g/index.html" class="menu-card">
                 <div class="icon-box" style="background-color: #f3e5f5; color: #9c27b0;">🧪</div>
@@ -269,6 +269,25 @@
         </p>
 
         <hr style="border: 0; border-top: 1px solid #eee; margin: 3rem 0;">
+
+        <div style="margin-bottom: 3rem;">
+            <h3
+                style="font-size: 1.4rem; margin-bottom: 1rem; color: #FF9F43; font-weight: bold; display: flex; align-items: center;">
+                <span
+                    style="background: #fff3e0; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">🎲</span>
+                무작위 도구
+            </h3>
+            <p style="margin-bottom: 1rem;">
+                "오늘 뭐 먹지? 누가 쏠래?" 사소하지만 골치 아픈 결정의 순간들. 무작위 도구은 여러분의 선택 스트레스를
+                제로(0)로 만들어드립니다. 공정한 알고리즘과 재미있는 시각 효과로 결정의 순간을 즐거운 이벤트로 바꿔보세요.
+            </p>
+            <ul style="color: #636e72; font-size: 0.95rem;">
+                <li><strong>결정 도구</strong>: <a href="random/picker.html"
+                        style="color:#e67e22; text-decoration:none; font-weight:bold;">간편 랜덤 추첨기</a>, <a
+                        href="random/snail.html" style="color:#d63031; text-decoration:none; font-weight:bold;">달팽이
+                        레이싱</a></li>
+            </ul>
+        </div>
 
         <div style="margin-bottom: 3rem;">
             <h3
@@ -374,25 +393,6 @@
                 <li><strong>환경 진단</strong>: <a href="dianosis/system_info.html"
                         style="color:#2d3436; text-decoration:none; font-weight:bold;">내 IP/브라우저 정보</a>, 인터넷 속도 측정, 화면
                     해상도 확인</li>
-            </ul>
-        </div>
-
-        <div style="margin-bottom: 3rem;">
-            <h3
-                style="font-size: 1.4rem; margin-bottom: 1rem; color: #FF9F43; font-weight: bold; display: flex; align-items: center;">
-                <span
-                    style="background: #fff3e0; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">🎲</span>
-                Random Lab (결정 해결)
-            </h3>
-            <p style="margin-bottom: 1rem;">
-                "오늘 뭐 먹지? 누가 쏠래?" 사소하지만 골치 아픈 결정의 순간들. Random Lab은 여러분의 선택 스트레스를
-                제로(0)로 만들어드립니다. 공정한 알고리즘과 재미있는 시각 효과로 결정의 순간을 즐거운 이벤트로 바꿔보세요.
-            </p>
-            <ul style="color: #636e72; font-size: 0.95rem;">
-                <li><strong>결정 도구</strong>: <a href="random/picker.html"
-                        style="color:#e67e22; text-decoration:none; font-weight:bold;">간편 랜덤 추첨기</a>, <a
-                        href="random/snail.html" style="color:#d63031; text-decoration:none; font-weight:bold;">달팽이
-                        레이싱</a></li>
             </ul>
         </div>
 
