--- a/test/kkondae_test.html
+++ b/test/kkondae_test.html
@@ -310,6 +310,8 @@
             transform: translateX(-50%) rotate(-3deg);
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
