--- a/test/parenting_style.html
+++ b/test/parenting_style.html
@@ -318,6 +318,8 @@
             word-break: keep-all;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
