--- a/test/spending_test.html
+++ b/test/spending_test.html
@@ -265,6 +265,8 @@
             animation: print 1s ease-out forwards;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
