--- a/test/body_age_test.html
+++ b/test/body_age_test.html
@@ -315,6 +315,8 @@
             border-radius: 4px;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
