--- a/test/color_test.html
+++ b/test/color_test.html
@@ -282,6 +282,8 @@
             font-size: 13px;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
