--- a/test/dopamine_test.html
+++ b/test/dopamine_test.html
@@ -404,6 +404,8 @@
             box-shadow: 0 0 10px var(--neon-purple);
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
