--- a/test/english_survival.html
+++ b/test/english_survival.html
@@ -322,6 +322,8 @@
             border: 2px solid #ddd;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
