--- a/test/fortune_test.html
+++ b/test/fortune_test.html
@@ -372,6 +372,8 @@
             text-decoration: underline;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
