--- a/test/love_cell_test.html
+++ b/test/love_cell_test.html
@@ -300,6 +300,8 @@
             font-size: 0.9rem;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
