--- a/businessevent/certificate.html
+++ b/businessevent/certificate.html
@@ -481,6 +481,8 @@
         window.addEventListener('resize', resizeCert);
         window.addEventListener('load', resizeCert);
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
