--- a/businessevent/namecard.html
+++ b/businessevent/namecard.html
@@ -405,6 +405,8 @@
         window.addEventListener('resize', resizeCard);
         window.addEventListener('load', resizeCard);
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 </head>
 
