--- a/businessevent/invitation.html
+++ b/businessevent/invitation.html
@@ -429,6 +429,8 @@
             }
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
