--- a/businessevent/receipt.html
+++ b/businessevent/receipt.html
@@ -440,6 +440,8 @@
         window.addEventListener('resize', resizePreview);
         window.addEventListener('load', resizePreview);
     </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
