--- a/20g/hacker.html
+++ b/20g/hacker.html
@@ -209,6 +209,8 @@
             display: block;
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
