--- a/20g/index.html
+++ b/20g/index.html
@@ -231,6 +231,8 @@
             color: #1e40af;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8663042229769611"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
